--- a/client/package.json
+++ b/client/package.json
@@ -47,7 +47,7 @@
     "react-redux": "^9.1.0",
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.22.1",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^0.0.0",
     "react-sweetalert2": "^0.6.0",
     "redux-persist": "^6.0.0",
     "sonner": "^1.7.4",
@@ -68,6 +68,6 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "vite": "^5.1.4"
+    "vite": "^7.3.1"
   }
 }
